# tutreklamabot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.userbot  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: ad_notification_handler.py  admin.py  bot.py  bot_texts.py  constants.py  default_texts.py  health_views.py  keyboards.py  middlewares.py  models.py  redis_client.py  states.py  tasks.py  tg_message_formatter.py  tools.py  translations.py  utils.py
bot/handlers/: command_handlers.py  helpers.py  other_handlers.py  payment_handlers.py  payment_notification_handler.py  status_handlers.py
bot/management/commands/: process_recurring_payments.py  run_userbot.py  tutreklama_runbot.py  update_texts.py
bot/migrations/: 0001_initial.py  0002_channel_userbot_channeluser_channel_users_and_more.py  0003_texttemplate.py  0004_allow_null_telegram_id.py  0005_remove_channelnews_short_message.py  0006_userbot_last_activity_userbot_last_error_and_more.py  0007_alter_userbot_string_session.py  0008_tariff_usersubscription_payment_and_more.py  0009_seed_initial_tariffs.py  0010_usersubscription_is_recurring_enabled_and_more.py  0011_remove_usersubscription_payment_id_and_more.py  0012_remove_usersubscription_previous_subscription_and_more.py  0013_payment_is_master.py  0014_user_ads_campaign.py
bot/services/: payment_service.py  recurring_payment_service.py  userbot_auth.py
bot/utils/: link_parser.py
bot/views/: payment_views.py
core/: asgi.py  celery.py  event_manager.py  redis_manager.py  urls.py  wsgi.py
scripts/: manage.sh
settings/: base.py  gunicorn.prod.conf.py  prod.py
templates/admin/bot/userbot/: auth.html
userbot/: apps.py  core.py  message_handler.py  migration_handler.py  redis_messages.py  subscription_handler.py  userbot_daemon.py  userbot_manager.py  userbot_pool.py
userbot/services/: userbot_admin_manager.py  userbot_auth.py
utils/: admin.py  advertisement_detector.py  db.py  models.py
