[project]
name = "tutreklama"
version = "0.1.0"
description = "Telegram bot for tracking advertising posts in channels"
authors = [{ name = "Anton Kokorin", email = "ant.kkrn@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "cryptography>=43,<44",
    "django>=5.2.6",
    "django-cryptography-5>=2.0.3",
    "emoji>=2.15.0",
    "gunicorn>=23.0.0",
    "hiredis>=3.3.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.5,<4",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "robokassa>=1.0.8",
    "structlog>=25.4.0",
    "telegram-text>=0.2.0",
    "telethon>=1.41.2",
    "uvicorn>=0.37.0",
]

dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]  # E203 - whitespace before ':', E501 - line too long

[tool.ruff.lint.isort]
known-first-party = ["bot", "userbot", "core", "utils"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 0
